syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message Sum {
    int32 int_one = 1;
    int32 int_two = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}


message PrimeNumberDecompositionRequest{
    int64 number = 1;
}

message PrimeNumberDecompositionResponse{
    int64 prime_factor = 1;
}

service CalculatorService{
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
    returns (stream PrimeNumberDecompositionResponse) {};
}